# gift-card-project-backend

./: .gitignore  README.md
.devcontainer/: devcontainer.json
dev/: test_promnt.py  ui_dev.py
genai_app/: README.md  pyproject.toml
genai_app/config/: llm  llm.yaml  questions  questions.yaml
genai_app/dev/: api_dev_test.py  test_llm.py
genai_app/src/: api.py  llm.py  text_processing.py  utils.py
