[tool.poetry]
name = "genai-app"
version = "0.1.0"
description = ""
authors = ["Oz Mendelsohn <oz.mendelsohn@gmail.com>"]
readme = "README.md"
packages = [{include = "src"},
            {include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
uvicorn = "<0.23.0"
fastapi = "<0.105.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.11"
litellm = {extras = ["proxy"], version = "^1.20.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
